[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12"]

[project]
name = "hftorchcache"
version = "0.0.2"
description = "Efficient caching of Hugging Face models using PyTorch serialisation"
authors = [
  {name = "Louis Maddox", email = "louismmx@gmail.com"}
]
dependencies = [
  "accelerate>=1.3.0",
  "platformdirs>=4.3.6",
  "torch>=2.10.0",
  "transformers>=4.0.0"
]
requires-python = ">=3.10"
readme = "README.md"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/lmmx/hftorchcache"
Repository = "https://github.com/lmmx/hftorchcache.git"

[tool.uv.build-backend]
module-name = "hftc"
module-root = "src"
